<resources>
    <string name="app_name">DicodingUserApp</string>
    <string name="user_name">Name:</string>
    <string name="repository">Repository</string>
    <string name="following">Following</string>
    <string name="follower">Follower</string>


    <string-array name="username">
        <item>JakeWharton</item>
        <item>amitshekhariitbhu</item>
        <item>romainguy</item>
        <item>chrisbanes</item>
        <item>tipsy</item>
        <item>ravi8x</item>
        <item>jasoet</item>
        <item>budioktaviyan</item>
        <item>hendisantika</item>
        <item>sidiqpermana</item>
    </string-array>

    <string-array name="name">
        <item>Jake Wharton</item>
        <item>Amit Shekhar</item>
        <item>Romain Guy</item>
        <item>Chris Banes</item>
        <item>David</item>
        <item>Ravi Tamada</item>
        <item>Deny Prasetyo</item>
        <item>Budi Oktaviyan</item>
        <item>Hendi Santika</item>
        <item>Sidiq Permana</item>
    </string-array>

    <string-array name="location">
        <item>Pittsburgh, PA, USA</item>
        <item>New Delhi, India</item>
        <item>California</item>
        <item>Sydney, Australia</item>
        <item>Trondheim, Norway</item>
        <item>India</item>
        <item>Kotagede, Yogyakarta, Indonesia</item>
        <item>Jakarta, Indonesia</item>
        <item>Bojongsoang - Bandung Jawa Barat</item>
        <item>Jakarta Indonesia</item>
    </string-array>

    <string-array name="repository">
        <item>102</item>
        <item>37</item>
        <item>9</item>
        <item>30</item>
        <item>56</item>
        <item>28</item>
        <item>44</item>
        <item>110</item>
        <item>1064</item>
        <item>65</item>
    </string-array>

    <string-array name="company">
        <item>Google, Inc.</item>
        <item>MindOrksOpenSource</item>
        <item>Google</item>
        <item>Google working on @android</item>
        <item>Working Group Two</item>
        <item>AndroidHive | Droid5</item>
        <item>gojek-engineering</item>
        <item>KotlinID</item>
        <item>JVMDeveloperID @KotlinID @IDDevOps</item>
        <item>Nusantara Beta Studio</item>
    </string-array>

    <string-array name="followers">
        <item>56995</item>
        <item>5153</item>
        <item>7972</item>
        <item>14725</item>
        <item>788</item>
        <item>18628</item>
        <item>277</item>
        <item>178</item>
        <item>428</item>
        <item>465</item>
    </string-array>

    <string-array name="following">
        <item>12</item>
        <item>2</item>
        <item>0</item>
        <item>1</item>
        <item>0</item>
        <item>3</item>
        <item>39</item>
        <item>23</item>
        <item>61</item>
        <item>10</item>
    </string-array>

    <string-array name="avatar">
        <item>https://avatars0.githubusercontent.com/u/66577?v=4</item>
        <item>https://avatars0.githubusercontent.com/u/9877145?v=4</item>
        <item>https://avatars1.githubusercontent.com/u/869684?v=4</item>
        <item>https://avatars3.githubusercontent.com/u/227486?v=4</item>
        <item>https://avatars3.githubusercontent.com/u/1521451?v=4</item>
        <item>https://avatars1.githubusercontent.com/u/497670?v=4</item>
        <item>https://avatars3.githubusercontent.com/u/363917?v=4</item>
        <item>https://avatars2.githubusercontent.com/u/2031493?v=4</item>
        <item>https://avatars1.githubusercontent.com/u/3713580?v=4</item>
        <item>https://avatars1.githubusercontent.com/u/4090245?v=4</item>
    </string-array>

    <string name="search">Masukkan kata</string>
    <string name="this_activity">Ini adalah menu activity</string>
    <string name="this_fragment">Ini adalah menu fragment</string>
    <string name="menu_1">Menu 1</string>
    <string name="menu_2">Menu 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tab_text_1">Follower</string>
    <string name="tab_text_2">Following</string>
    <string name="tab_text_3">Setting</string>
    <string name="content_tab_home">Welcome Home</string>
    <string name="content_tab_profile">Change your Profile here</string>
    <string name="content_tab_text">This is Tab</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>
    <string name="favourite">Favourite</string>
    <string name="favourite_users">Favourite Users</string>
    <string name="reminder_setting_preference">Reminder at 9:00 AM</string>
    <string name="key_reminder_setting_preference">reminder</string>
    <string name="setting">Setting</string>


</resources>