<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/detail_img_avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:elevation="8dp"
        app:civ_border_color="#00FFFFFF"
        app:civ_border_width="2dp" />

    <TextView
        android:id="@+id/detail_txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/name"
        android:textColor="#323033"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/detail_txt_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/username"
        android:textColor="#323033"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/detail_txt_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/company"
        android:textColor="#323033"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/detail_txt_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/location"
        android:textColor="#323033"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/detail_txt_repository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/repository"
        android:textColor="#323033"
        android:textSize="15sp"
        android:textStyle="bold" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:tabTextColor="@android:color/white" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>