<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_avatar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerVertical="true"
        android:elevation="3dp"
        app:civ_border_color="#00FFFFFF"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.468" />

    <TextView
        android:id="@+id/txt_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="8dp"
        android:layout_toEndOf="@id/img_avatar"
        android:layout_toRightOf="@id/img_avatar"
        android:text="@string/user_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_avatar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062" />

    <TextView
        android:id="@+id/txt_follower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_username"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_toRightOf="@id/img_avatar"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/follower"
        android:textColor="#323033"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_avatar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_username"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_toRightOf="@id/txt_follower"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/following"
        android:textColor="#323033"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_follower"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_repository"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@+id/txt_follower"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="12dp"
        android:layout_toRightOf="@id/img_avatar"
        android:background="#000"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="3"
        android:paddingHorizontal="10dp"
        android:text="@string/repository"
        android:textColor="#FFF"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/img_avatar"
        app:layout_constraintTop_toBottomOf="@+id/txt_follower" />

</androidx.constraintlayout.widget.ConstraintLayout>